devops/s3/cloudformation/ecs/rds/cluster-elb.yml
#devpanel
#Copyright (C) 2018 devpanel

#This program is free software: you can redistribute it and/or modify
#it under the terms of the GNU General Public License as published by
#the Free Software Foundation, either version 3 of the License, or
#(at your option) any later version.

#This program is distributed in the hope that it will be useful,
#but WITHOUT ANY WARRANTY; without even the implied warranty of
#MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#GNU General Public License for more details.

#You should have received a copy of the GNU General Public License
#along with this program.  If not, see <http://www.gnu.org/licenses/>.



AWSTemplateFormatVersion: 2010-09-09
Description: Sets up ecs-cluster-rds
Parameters:
  ClusterName:
    Type: String

  DefaultAcmCertificateArn:
    Type: String

Resources:
#========== Security Groups
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        'Fn::ImportValue': !Sub ${ClusterName}VPC
      GroupName: !Sub ${ClusterName}AllowWebServer
      GroupDescription: Enables access to all IPs to port 80 and 443
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0


#========== Public Newtwork Load Balancer
  PublicNlb:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Type: network
      Scheme: internet-facing
      Subnets:
        - 'Fn::ImportValue': !Sub ${ClusterName}PublicSubnet1
        - 'Fn::ImportValue': !Sub ${ClusterName}PublicSubnet2

  PublicNlbDefaultTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId:
        'Fn::ImportValue': !Sub ${ClusterName}VPC
      Port: 22
      Protocol: TCP

  PublicNlbListenerForSSH:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref PublicNlb
      Port: 22
      Protocol: TCP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref PublicNlbDefaultTargetGroup


#========== Public Application Load Balancer
  PublicAlb:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
#      Name: !Sub public-alb-${ClusterName}
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: '90'
      Type: application
      Scheme: internet-facing
      Subnets:
        - 'Fn::ImportValue': !Sub ${ClusterName}PublicSubnet1
        - 'Fn::ImportValue': !Sub ${ClusterName}PublicSubnet2
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
        - 'Fn::ImportValue': !Sub ${ClusterName}InternalAccessSecurityGroup

  PublicAlbDefaultTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
#      Name: !Sub public-alb-${ClusterName}-default
      VpcId:
        'Fn::ImportValue': !Sub ${ClusterName}VPC
      Port: 80
      Protocol: HTTP
      Matcher:
        HttpCode: '301'
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2

  PublicAlbListenerForHttp:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref PublicAlb
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref PublicAlbDefaultTargetGroup

  PublicAlbListenerForHttps:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref PublicAlb
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref DefaultAcmCertificateArn
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref PublicAlbDefaultTargetGroup

Outputs:
  LoadBalancerSecurityGroup:
    Value: !Ref LoadBalancerSecurityGroup
    Export:
      Name: !Sub ${ClusterName}LoadBalancerSecurityGroup

  FrontendNlbDefaultTargetGroup:
    Value: !Ref PublicNlbDefaultTargetGroup
    Export:
      Name: !Sub ${ClusterName}FrontendNlbDefaultTargetGroup

  FrontendNlbDns:
    Value: !Sub ${PublicNlb.DNSName}
    Export:
      Name: !Sub ${ClusterName}FrontendNlbDns

  FrontendAlbDefaultTargetGroup:
    Value: !Ref PublicAlbDefaultTargetGroup
    Export:
      Name: !Sub ${ClusterName}FrontendAlbDefaultTargetGroup

  FrontendAlbDns:
    Value: !Sub ${PublicAlb.DNSName}
    Export:
      Name: !Sub ${ClusterName}FrontendAlbDns

  FrontendAlbFullName:
    Value: !Sub ${PublicAlb.LoadBalancerFullName}
    Export:
      Name: !Sub ${ClusterName}FrontendAlbFullName

  FrontendAlbListenerForHttp:
    Value: !Ref PublicAlbListenerForHttp
    Export:
      Name: !Sub ${ClusterName}FrontendAlbListenerForHttp

  FrontendAlbListenerForHttps:
    Value: !Ref PublicAlbListenerForHttps
    Export:
      Name: !Sub ${ClusterName}FrontendAlbListenerForHttps

  BackendAlbDefaultTargetGroup:
    Value: !Ref PublicAlbDefaultTargetGroup
    Export:
      Name: !Sub ${ClusterName}BackendAlbDefaultTargetGroup

  BackendAlbDns:
    Value: !GetAtt PublicAlb.DNSName
    Export:
      Name: !Sub ${ClusterName}BackendAlbDns

  BackendAlbFullName:
    Value: !GetAtt PublicAlb.LoadBalancerFullName
    Export:
      Name: !Sub ${ClusterName}BackendAlbFullName

  BackendAlbListenerForHttp:
    Value: !Ref PublicAlbListenerForHttp
    Export:
      Name: !Sub ${ClusterName}BackendAlbListenerForHttp

  BackendAlbListenerForHttps:
    Value: !Ref PublicAlbListenerForHttps
    Export:
      Name: !Sub ${ClusterName}BackendAlbListenerForHttps

  CanonicalAlbHostedZoneID:
    Value: !GetAtt PublicAlb.CanonicalHostedZoneID
    Export:
      Name: !Sub ${ClusterName}CanonicalAlbHostedZoneID
